fixed scrollbar

--- a/styles/RemovableTag.module.css
+++ b/styles/RemovableTag.module.css
@@ -1,7 +1,30 @@
 .container {
     padding: 10px;
-    max-width: 1000px;
-    border: solid 1px black
+    max-width: 700px;
+    max-height: 200px;
+    overflow: auto;
+
+}
+
+/* width */
+.container::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+/* Track */
+.container::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+/* Handle */
+.container::-webkit-scrollbar-thumb {
+    background: #888;
+    
+}
+
+/* Handle on hover */
+.container::-webkit-scrollbar-thumb:hover {
+    background: #555;
 }
 
 .black {
